--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = [
-    "django>=5.1.3",
-]
+dependencies = ["django>=5.1.3"]
+
+[dependency-groups]
+dev = ["ruff>=0.8.4"]
